--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,13 @@
 <resources>
-    <string name="app_name">My Library</string>
+    <string name="app_name">Mobpro 1</string>
     <string name="list_kosong">Belum ada data</string>
     <string name="x_diklik">%1$s diklik!</string>
     <string name="tambah_catatan">Tambah catatan</string>
-    <string name="belum_bisa">Belum bisa tambah catatan.</string>
+    <string name="judul">Judul</string>
+    <string name="isi_catatan">Isi Catatan</string>
+    <string name="kembali">Kembali</string>
+    <string name="simpan">Simpan</string>
+    <string name="edit_catatan">Ubah catatan</string>
+    <string name="belum_bisa">Belum bisa</string>
+
 </resources>
